setup first tailwind draft theme

--- a/src/styles/fonts.css
+++ b/src/styles/fonts.css
@@ -75,6 +75,22 @@
 }
 
 @font-face {
+	font-family: 'Drafting Mono';
+	font-style: normal;
+	font-weight: 400;
+	font-display: swap;
+	src: url('/fonts/drafting-mono/DraftingMono-Regular.woff2') format('woff2');
+}
+
+@font-face {
+	font-family: 'Drafting Mono';
+	font-style: normal;
+	font-weight: 700;
+	font-display: swap;
+	src: url('/fonts/drafting-mono/DraftingMono-Bold.woff2') format('woff2');
+}
+
+@font-face {
 	font-family: 'OpenDyslexic';
 	font-style: normal;
 	font-weight: 400;
