--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,10 +1,4 @@
 :root {
-	/* font */
-	--font-sans: 'Atkinson Hyperlegible', sans-serif;
-	--font-mono: 'JetBrains Mono', monospace;
-	--font-dyslexic: 'OpenDyslexic', sans-serif;
-	--font-dyslexic-mono: 'OpenDyslexic Mono', monospace;
-
 	/* post */
 	--post-txt-size: 16px;
 	--post-txt-length: 70ch;
@@ -23,43 +17,18 @@
 	--rounded-20: 20px;
 }
 
-html {
-	font-size: 62.5%;
-	scroll-behavior: smooth;
-	scrollbar-width: thin;
-	scrollbar-color: var(--clr-scrollbar-thumb) transparent;
-    @apply !bg-base-200 scroll-smooth scroll-pt-24	overflow-x-hidden overflow-y-scroll;
-}
+/* html { */
+/* 	font-size: 62.5%; */
+/* 	scroll-behavior: smooth; */
+/* 	scrollbar-width: thin; */
+/* 	scrollbar-color: var(--clr-scrollbar-thumb) transparent; */
+/*     @apply !bg-base-200 scroll-smooth scroll-pt-24	overflow-x-hidden overflow-y-scroll; */
+/* } */
 
-::selection {
-  @apply bg-primary/20;
-}
-
-html,
-body {
-	height: 100%;
-}
-
-body {
-	font-family: var(--font-sans);
-	font-size: var(--post-txt-size);
-	color: var(--clr-txt);
-	background-color: var(--clr-bg);
-
-	&::before {
-		content: '';
-		width: 100%;
-		height: 100%;
-		position: fixed;
-		background-image: linear-gradient(
-			to bottom,
-			hsl(225 74% 40%),
-			hsl(270 70% 40%)
-		);
-		opacity: 0.1;
-		z-index: -1;
-	}
-}
+/* html, */
+/* body { */
+/* 	height: 100%; */
+/* } */
 
 *:focus {
 	outline: none;
@@ -69,7 +38,6 @@ body {
 
 a {
 	position: relative;
-	color: var(--clr-link-txt);
 	font-weight: 700;
 	text-decoration: none;
 	transition: color 0.3s ease;
@@ -136,64 +104,4 @@ lite-youtube::before {
 	clip: rect(0, 0, 0, 0);
 	white-space: nowrap;
 	border-width: 0;
-}
-
-/* .prose */
-
-.prose {
-  @apply !max-w-none;
-}
-
-/* .prose heading */
-
-.prose > :is(h1, h2, h3, h4, h5) > a {
-  @apply no-underline font-bold;
-}
-
-.prose > :is(h1, h2, h3, h4, h5) > a::after {
-  @apply pl-2 text-base-200 transition-all content-['#'];
-}
-
-.prose > :is(h1, h2, h3, h4, h5):hover > a::after {
-  @apply text-primary;
-}
-
-/* .prose table */
-
-.prose div > table > thead {
-  @apply border-0;
-}
-
-.prose div > table > thead > tr > th {
-  @apply !relative;
-}
-
-/* .prose a */
-
-.prose :is(p, li) > a {
-  @apply bg-[length:100%_0.2em] hover:bg-[length:100%_100%] bg-[position:0_88%] bg-gradient-to-t from-secondary/50 to-secondary/40 bg-no-repeat transition-all ease-in-out !no-underline;
-}
-
-/* .prose misc */
-
-.prose > p img {
-  @apply w-full;
-}
-
-.prose :is(p, li) > code {
-  @apply bg-base-200 px-2;
-}
-
-.prose li > input {
-  @apply me-2 -my-0.5;
-}
-
-.prose hr {
-  @apply border-none;
-}
-
-/* spoiler */
-
-.spoiler {
-  @apply blur-sm hover:blur-none active:blur-none transition-all select-all;
 }
